--- a/suggest-tool.html
+++ b/suggest-tool.html
@@ -246,7 +246,7 @@
                     ✅ Grazie per il tuo suggerimento! Lo esamineremo entro 48 ore.
                 </div>
 
-                <form id="suggestForm" action="#" method="POST">
+                <form id="suggestForm" netlify name="suggest-tool" method="POST">
                     <div class="form-group">
                         <label for="toolName">Nome del Tool <span class="required">*</span></label>
                         <input type="text" id="toolName" name="toolName" class="form-control" required placeholder="es. ChatGPT, Midjourney...">
