--- a/suggest-tool.html
+++ b/suggest-tool.html
@@ -460,8 +460,8 @@
             //}, 2000);
 //------------------------------------------------
             // Log dei dati per debug
-            console.log('Form data:', Object.fromEntries(formData.entries()));
-        }
+            //console.log('Form data:', Object.fromEntries(formData.entries()));
+        //}
 
         // Contatore caratteri per descrizione
         const descriptionField = document.getElementById('description');
