--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Toolkit Directory - I Migliori Strumenti AI</title>
-    <meta name="description" content="Scopri i migliori 31 strumenti AI gratuiti e premium, organizzati per categoria. Chat/Agents, Image Generation, Dev Tools e molto altro.">
+    <meta name="description" content="Scopri i migliori strumenti AI gratuiti e premium, organizzati per categoria. Chat/Agents, Image Generation, Dev Tools e molto altro.">
     
     <!-- Favicon principale -->
     <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-32x32.png">
