--- a/suggest-tool.html
+++ b/suggest-tool.html
@@ -428,7 +428,7 @@
                                         <option value="🎵 Audio/Voice">🎵 Audio/Voice</option>
                                         <option value="🎓 Education">🎓 Education</option>
                                         <option value="📢 Marketing">📢 Marketing</option>
-                                        <option value="PromptAI"><img src="icons/promptai.svg" width="20" alt="Prompt AI"/> Prompt/AI</option>
+                                        <option value="💎 PromptAI">📢 PromptAI</option>
                                         <option value="🔧 Other">🔧 Other</option>
                                     </select>
                                 </div>
