--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Toolkit Directory - I Migliori Strumenti AI</title>
     <meta name="description" content="Scopri i migliori 31 strumenti AI gratuiti e premium, organizzati per categoria. Chat/Agents, Image Generation, Dev Tools e molto altro.">
