--- a/suggest-tool.html
+++ b/suggest-tool.html
@@ -389,7 +389,7 @@
                     </div>
                     
                     <!-- Netlify Forms - form con attributi necessari -->
-                    <form name="suggest-tool" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="./success.html">
+                    <form name="suggest-tool" method="POST" netlify="true" netlify-honeypot="bot-field">
                         <!-- Honeypot per spam protection -->
                         <div class="honeypot">
                             <label for="bot-field">Non compilare se sei umano:</label>
