--- a/suggest-tool.html
+++ b/suggest-tool.html
@@ -415,23 +415,35 @@
                             </div>
                             
                             <div class="form-row">
-                                <div class="form-group">
-                                    <label for="category">Categoria <span class="required">*</span></label>
-                                    <select id="category" name="category" required>
-                                        <option value="">Seleziona categoria</option>
-                                        <option value="🤖 Chat/Agents">🤖 Chat/Agents</option>
-                                        <option value="🖼️ Image">🖼️ Image</option>
-                                        <option value="💻 Dev Tools">💻 Dev Tools</option>
-                                        <option value="📊 Data/Analytics">📊 Data/Analytics</option>
-                                        <option value="⚡ Productivity">⚡ Productivity</option>
-                                        <option value="📝 Content">📝 Content</option>
-                                        <option value="🎵 Audio/Voice">🎵 Audio/Voice</option>
-                                        <option value="🎓 Education">🎓 Education</option>
-                                        <option value="📢 Marketing">📢 Marketing</option>
-                                        <option value="💎 PromptAI">📢 PromptAI</option>
-                                        <option value="🔧 Other">🔧 Other</option>
-                                    </select>
-                                </div>
+                            <div class="form-group">
+                                <label for="category">Categoria <span class="required">*</span></label>
+                                <select id="category" name="category" required>
+                                    <option value="">Seleziona categoria</option>
+                                    <option value="💻 Coding">💻 Coding</option>
+                                    <option value="🏢 Business Operations">🏢 Business Operations</option>
+                                    <option value="💰 Sales">💰 Sales</option>
+                                    <option value="📈 Finance">📈 Finance</option>
+                                    <option value="🎨 Design">🎨 Design</option>
+                                    <option value="🏥 Healthcare">🏥 Healthcare</option>
+                                    <option value="📊 Consulting">📊 Consulting</option>
+                                    <option value="🏛️ Government">🏛️ Government</option>
+                                    <option value="📊 Data Analysis">📊 Data Analysis</option>
+                                    <option value="📋 Project Management">📋 Project Management</option>
+                                    <option value="⚖️ Legal">⚖️ Legal</option>
+                                    <option value="👥 Recruiting / HR">👥 Recruiting / HR</option>
+                                    <option value="🎓 Students">🎓 Students</option>
+                                    <option value="🤖 Chat/Agents">🤖 Chat/Agents</option>
+                                    <option value="🖼️ Image">🖼️ Image</option>
+                                    <option value="⚡ Productivity">⚡ Productivity</option>
+                                    <option value="📝 Content">📝 Content</option>
+                                    <option value="🎵 Audio/Voice">🎵 Audio/Voice</option>
+                                    <option value="📢 Marketing">📢 Marketing</option>
+                                    <option value="💎 PromptAI">💎 PromptAI</option>
+                                    <option value="⚙️ Automation">⚙️ Automation</option>
+                                    <option value="♻️ Other">♻️ Other</option>
+                                </select>
+                            </div>
+                        </div>
                                 
                                 <div class="form-group">
                                     <label for="pricing">Piano Tariffario <span class="required">*</span></label>
