--- a/index.html
+++ b/index.html
@@ -494,6 +494,10 @@
                 <a href="./suggest-tool.html" style="color: rgba(255,255,255,0.8); text-decoration: none;">
                     🚀 Suggerisci un tool
                 </a>
+            <div style="margin-top: 20px; font-size: 0.9rem;">
+                <a href="./suggest-bug.html" style="color: rgba(255,255,255,0.8); text-decoration: none;">
+                    🐍 Segnalazione Bug
+                </a>
                 <span style="margin: 0 10px;">|</span>
                 <a href="#" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;" 
                    style="color: rgba(255,255,255,0.8); text-decoration: none;">
